--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,21 @@
     <string name="tab_text_2">Tab 2</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string-array name="cities">
+        <item>None</item>
+        <item>Silvassa</item>
+        <item>Udaipur</item>
+        <item>Sasaram</item>
+        <item>Ramagundam</item>
+        <item>Laharpur</item>
+    </string-array>
+    <string-array name="states">
+        <item>None</item>
+        <item>Kerala</item>
+        <item>Dadra and Nagar Haveli</item>
+        <item>Bihar</item>
+        <item>Telangana</item>
+        <item>Uttar Pradesh</item>
+    </string-array>
+
 </resources>
