--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string-array name="cities">
-        <item>None</item>
+        <item></item>
         <item>Silvassa</item>
         <item>Udaipur</item>
         <item>Sasaram</item>
@@ -14,7 +14,7 @@
         <item>Laharpur</item>
     </string-array>
     <string-array name="states">
-        <item>None</item>
+        <item> </item>
         <item>Kerala</item>
         <item>Dadra and Nagar Haveli</item>
         <item>Bihar</item>
