--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,15 @@
 <resources>
     <string name="app_name">EdvoraAssessment</string>
     <string name="title_activity_main">MainActivity</string>
-    <string name="tab_text_1">Tab 1</string>
-    <string name="tab_text_2">Tab 2</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="tab_text_1">Nearest</string>
+    <string name="tab_text_2">Past</string>
+    <string name="tab_text_3">Upcoming</string>
+    <string name="filters">Filters</string>
+    <string name="city">City</string>
+    <string name="state">State</string>
+    <string name="edvora">Edvora</string>
+    <string name="rides">Rides</string>
+
     <string-array name="cities">
         <item></item>
         <item>Silvassa</item>
